--- a/Css/InicioenCss.css
+++ b/Css/InicioenCss.css
@@ -86,7 +86,7 @@ img {
     display: block;
     margin: 0 auto;
     max-width: 100%;
-    height: 450px;
+    /*height: 450px;*/
     width: auto;
     margin-bottom: -4px;
     border-radius: 7px;
